# Sentry-USB-Rusty

./: .gitignore  AUDIT_TESLA_RECOVERY_2026_06_24.md  BUILD.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build-image.sh  build.sh  install-pi.sh
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  cla.yml
contrib/orangepi-zero3w/: README.md  install-a733.sh  repatch-a733.sh
crates/api/: Cargo.toml
crates/api/src/: auth.rs  away_mode.rs  backup.rs  ble.rs  ble_debug.rs  charging.rs  clips.rs  cloud.rs  command.rs  community.rs  devices.rs  drives_handler.rs  files.rs  flags.rs  healthcheck.rs  keep_accessory.rs  keep_awake.rs  lib.rs  lock_chime.rs  logs.rs  notification_center.rs  notifications.rs  overview.rs  router.rs  setup.rs  snapshots.rs  status.rs  storage_repair.rs  support.rs  system.rs  terminal.rs  travel_mode.rs  update.rs
crates/cloud_uploader/: Cargo.toml
crates/cloud_uploader/src/: db_ext.rs  encrypt.rs  lib.rs  pairing.rs  state.rs  uploader.rs
crates/config/src/: lib.rs
crates/drives/: Cargo.toml
crates/drives/examples/: extract_checksum.rs  import_stats.rs
crates/drives/src/: aggregate.rs  aggregate_telemetry.rs  backfill.rs  blob.rs  calc.rs  db.rs  extract.rs  fsd_versions.rs  grouper.rs  json_compat.rs  lib.rs  processor.rs  row.rs  schema.rs  store_codec.rs  syncguard.rs  types.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs  sentry_connect.rs
crates/sentryusb/: Cargo.toml  build.rs
crates/sentryusb/src/: embed.rs  main.rs  migrate.rs
crates/sentryusb/static/: index.html
crates/sentryusb/static/assets/: AboutTab-C8ccCI-_.js  AboutTab-CTdNK-J0.js  BackupsTab-Cgh2lhYP.js  BackupsTab-Dp-LAat4.js  Community-36QN9klw.js  Community-qG4byPDE.js  Dashboard-MGuv4FyE.js  Dashboard-wYuq_UUo.js  DeviceTab-BCec_lxM.js  DeviceTab-D-iAaYsl.js  DriveChart-DG5cZxsk.js  DriveChart-DsWcqzpc.js  DriveDetail-BYym6b19.js  DriveDetail-C2AVf-Z2.js  Drives-C_Ep0N8V.js  Drives-lYBjdgNQ.js  FSDAnalytics-Brn-hhCH.js  FSDAnalytics-CItLTDYJ.js  Files-BsJN0mgp.js  Files-CWog81hS.js  HealthCheckModal-CB1Dz6Jb.js  HealthCheckModal-SLuto1Jv.js  Login-C6oNnx11.js  Login-hF73F1Bo.js  Logs-B9pkV__Y.js  Logs-C5U2zLzt.js  MiniMap-CJzyZQJA.js  MiniMap-CWX_VWCy.js  Modal-CgBZu6a4.js  Modal-Cqvevlhk.js  NetworkTab-BsXrgL2K.js  NetworkTab-DMAF9Blt.js  Notifications-CDW_gEOk.js  Notifications-CkgPol9_.js  NotificationsTab-B5sCVJ0q.js  NotificationsTab-BsP2GMxa.js  Pill-7Vt2Kmcs.js  Pill-A56UJzRt.js  PrefCard-BoWVuaJI.js  PrefCard-cavTTOF0.js  (+38 more)
crates/setup/: Cargo.toml
crates/setup/src/: archive.rs  disk_images.rs  env.rs  error.rs  lib.rs  network.rs  partition.rs  readonly.rs  runner.rs  system.rs  teslacam_mount.rs  verify.rs
crates/tesla_ble/: Cargo.toml  build.rs
crates/tesla_ble/examples/: bluer_probe.rs  derive_key.rs  persistent_session.rs  session_info.rs  signed_request.rs  typed_query.rs
crates/tesla_ble/src/: actions.rs  adapter.rs  auth.rs  body_controller.rs  correlate.rs  crypto.rs  gatt.rs  keys.rs  lib.rs  manager.rs  session.rs  state_query.rs
crates/tesla_telemetry/: Cargo.toml
crates/tesla_telemetry/src/: action_socket.rs  clock_sync.rs  config.rs  db.rs  diag_log.rs  flags.rs  keep_accessory.rs  lock.rs  main.rs  radio.rs  sample.rs  sample_ble.rs
crates/usb_gadget/: Cargo.toml
crates/usb_gadget/src/: board.rs  early_bind.rs  flag.rs  lib.rs  snapshot.rs
crates/ws/src/: lib.rs
docs/superpowers/specs/: 2026-06-07-settings-always-visible-cards-design.md
pi-gen-sources/00-sentryusb-tweaks/: 00-run.sh
pi-gen-sources/00-sentryusb-tweaks/files/: sentryusb-pick-binary
run/: archiveloop  awake_start  make_snapshot.sh  post-archive-process.sh  release_snapshot.sh
run/cifs_archive/: verify-and-configure-archive.sh
run/nfs_archive/: verify-and-configure-archive.sh
run/rsync_archive/: archive-clips.sh  archive-is-reachable.sh
server/ble/: sentryusb-ble.py  sentryusb-ble.service  sentryusb-telemetry.service
setup/generic/: install.sh
setup/pi/: apply-runtime-patches.sh  configure-ap.sh  configure-automount.sh  configure-samba.sh  configure.sh  create-backingfiles-partition.sh  create-backingfiles.sh  make-root-fs-readonly.sh  sentryusb-ble-adv.sh  setup-sentryusb  verify-configuration.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: charging.ts  drives.ts  overview.ts
web/src/components/: CloudPairingSection.tsx  ErrorBoundary.tsx
web/src/components/charging/: ChargePowerChart.tsx  ChargingBanner.tsx  ChargingLineChart.tsx  ChargingRatesButton.tsx  ChargingSummaryStrip.tsx  ChargingTagFilter.tsx  MiniPinMap.tsx
web/src/components/dashboard/: CarStatusCard.tsx
web/src/components/drives/: ChargingSection.tsx  DatePopover.tsx  DriveChart.tsx  DriveMap.tsx  DriveRow.tsx  DriveScrubber.tsx  DrivesSummaryStrip.tsx  DrivesToolbar.tsx  DualPinBlock.tsx  FilterPopover.tsx  FsdEngagementStripe.tsx  ImportedDataNotice.tsx  MiniRouteMap.tsx  Pagination.tsx  SelectModeBar.tsx  StatTile.tsx  TagPopover.tsx  TemperatureChart.tsx
web/src/components/layout/: AppShell.tsx  MobileNav.tsx  Sidebar.tsx
web/src/components/settings/: KeepAccessoryConfig.tsx  KeepAccessoryMap.tsx  PrefCard.tsx  TravelModeDialog.tsx
web/src/components/setup/: SetupWizard.tsx
web/src/hooks/: useAwayMode.tsx  useChargingRates.ts  useDistanceUnit.ts  useDriveDetail.ts  useDrivesList.ts  useExperimental.ts  useKeepAccessory.tsx  useScrubberSync.tsx
web/src/lib/: api.ts  charge-format.ts  drive-format.ts  drive-stats.ts
web/src/pages/: ChargeSessionDetail.tsx  Charging.tsx  Dashboard.tsx  DriveDetail.tsx  Drives.tsx  FSDAnalytics.tsx  Files.tsx  Notifications.tsx  PreviewCharging.tsx  Settings.tsx  Snapshots.tsx  Viewer.tsx
web/src/pages/settings/: AboutTab.tsx  DeviceTab.tsx  NetworkTab.tsx  NotificationsTab.tsx  (+2 more)
web/src/types/: charging.ts  drives.ts
wiki/: Drives.md  Getting-Started.md  Home.md  Notifications.md  Setup-Wizard-Guide.md  Tesla-BLE-Telemetry.md  Troubleshooting.md  _Sidebar.md
(+8 files in other folders)
