[package]
name = "sentryusb-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
# Concurrent provider fan-out in send_to_all_with_context.
futures = "0.3"
ring = "0.17"
hex = "0.4"
urlencoding = "2"

chrono = { workspace = true }

sentryusb-config = { path = "../config", package = "sentryusb-config" }
