[package]
name = "sentryusb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "fs"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

sentryusb-config = { path = "../config", package = "sentryusb-config" }
sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }
sentryusb-ws = { path = "../ws", package = "sentryusb-ws" }
sentryusb-drives = { path = "../drives", package = "sentryusb-drives" }
sentryusb-api = { path = "../api", package = "sentryusb-api" }
sentryusb-setup = { path = "../setup", package = "sentryusb-setup" }
sentryusb-gadget = { path = "../usb_gadget", package = "sentryusb-gadget" }
sentryusb-cloud-uploader = { path = "../cloud_uploader", package = "sentryusb-cloud-uploader" }
