[package]
name = "sentryusb-tesla-ble"
version = "0.1.0"
edition = "2024"

# Bluez-aware Tesla BLE client. Coexists with bluez-based GATT servers
# on the same radio, unlike raw-HCI clients which require bluez offline.

[lib]
name = "sentryusb_tesla_ble"
path = "src/lib.rs"

# Standalone CLI used by run/awake_start to issue keep-awake BLE
# actions (wake, sentry-mode on/off, charge-port-open/close).
# Replaces the corresponding `tesla-control` shell-outs.
[[bin]]
name = "sentryusb-ble-action"
path = "src/bin/sentryusb_ble_action.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[[example]]
name = "body_controller"
path = "examples/body_controller.rs"

[[example]]
name = "session_info"
path = "examples/session_info.rs"

[[example]]
name = "derive_key"
path = "examples/derive_key.rs"

[[example]]
name = "signed_request"
path = "examples/signed_request.rs"

[[example]]
name = "persistent_session"
path = "examples/persistent_session.rs"

[[example]]
name = "typed_query"
path = "examples/typed_query.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

btleplug = "0.12"
futures = "0.3"
prost = "0.14"
prost-types = "0.14"
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
uuid = "1"
rand = "0.10"

# NIST P-256 ECDH for the session handshake.
# `pem` reads the on-disk private key file Tesla pairing produced.
p256 = { version = "0.13", features = ["ecdh", "pem", "pkcs8"] }
pem = "3"

# AES-128-GCM for signed-command authentication.
# `std` is explicit so `InvalidLength` implements `std::error::Error`
# (needed for `.context()` in auth.rs). It was previously pulled in
# transitively via sha2 0.10's digest stack; sha2 0.11 moved to a newer
# crypto-common, so we now request it directly.
aes-gcm = { version = "0.10", features = ["std"] }

[build-dependencies]
prost-build = "0.14"
# Vendored protoc so users don't need to apt install protobuf-compiler.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
